# TU-Do-ARPG

./: .clang-format  .gitignore  .gitlab-ci.yml  Doxyfile  README.md  install_dependencies.sh
gym_docker/: .env  (+2 more)
ros_ws/src/core/eyes/cartographer_setup/: CMakeLists.txt  README.md  package.xml
ros_ws/src/core/eyes/cartographer_setup/config/: cartographer_config.lua  cartographer_config_assets_writer.lua  cartographer_mapping_config.lua  cartographer_pure_localization_config.lua
ros_ws/src/core/eyes/cartographer_setup/maps/: Oschersleben.pgm  Oschersleben.yaml
ros_ws/src/core/eyes/cartographer_setup/urdf/: ego_racecar.urdf  model.urdf  racer.urdf
ros_ws/src/core/eyes/eyes_bringup/: CMakeLists.txt  package.xml
ros_ws/src/core/eyes/eyes_bringup/launch/: amcl.launch  launch_all_test_stuff_gym.launch  localization.launch  offline_mapping.launch  online_mapping.launch  pace_lap.launch  pgm_extraction.launch  start_obstacle_detection_stack.launch
ros_ws/src/core/eyes/eyes_bringup/maps/: bag4l.bag_map.yaml
ros_ws/src/core/eyes/eyes_bringup/rviz/: gym_config.rviz  gym_config_opp.rviz
ros_ws/src/core/eyes/eyes_msgs/: CMakeLists.txt  package.xml
ros_ws/src/core/eyes/eyes_msgs/msg/: Obstacle.msg  ObstacleList.msg  PoseWithScan.msg  Segment.msg  SegmentList.msg  Track.msg  TrackArray.msg
ros_ws/src/core/eyes/obstacle_detection_lidar/: CMakeLists.txt  package.xml
ros_ws/src/core/eyes/obstacle_detection_lidar/config/: obstacle_detection_lidar_gazebo.yaml  obstacle_detection_lidar_gym.yaml
ros_ws/src/core/eyes/obstacle_detection_lidar/include/: background_substraction.hpp  data.hpp  grid_map.hpp  obstacle_detection_lidar_node.hpp  obstacle_detection_lidar_visualization.hpp  scan_matching.hpp  segmentation.hpp
ros_ws/src/core/eyes/obstacle_detection_lidar/launch/: obstacle_detection_lidar_gazebo.launch  obstacle_detection_lidar_gym.launch
ros_ws/src/core/eyes/obstacle_detection_lidar/src/: background_substraction.cpp  grid_map.cpp  main.cpp  obstacle_detection_lidar_node.cpp  obstacle_detection_lidar_visualization.cpp  scan_matching.cpp  segmentation.cpp
ros_ws/src/core/eyes/obstacle_tracking/: CMakeLists.txt  package.xml
ros_ws/src/core/eyes/obstacle_tracking/config/: obstacle_tracking.yml
ros_ws/src/core/eyes/obstacle_tracking/include/: data_association.hpp  data_t.hpp  obstacle_tracking.hpp  state_estimation.hpp  util.hpp
ros_ws/src/core/eyes/obstacle_tracking/launch/: obstacle_tracking.launch
ros_ws/src/core/eyes/obstacle_tracking/src/: data_association.cpp  data_t.cpp  obstacle_tracking.cpp  obstacle_tracking_node.cpp  state_estimation.cpp  util.cpp
ros_ws/src/core/hands/control_command_handle/: CMakeLists.txt  package.xml
ros_ws/src/core/hands/control_command_handle/cfg/: control_command_handle.cfg
ros_ws/src/core/hands/control_command_handle/config/: control_command_handle.yaml
ros_ws/src/core/hands/control_command_handle/include/: control_command_handle.h  control_command_handle_visualization.h
ros_ws/src/core/hands/control_command_handle/launch/: control_command_handle.launch
ros_ws/src/core/hands/control_command_handle/src/: control_command_handle.cpp  control_command_handle_visualization.cpp  main.cpp
ros_ws/src/core/hands/hands_msgs/: CMakeLists.txt  package.xml
ros_ws/src/core/hands/hands_msgs/msg/: OpponentTrajectory.msg
ros_ws/src/core/hands/hands_srv/: CMakeLists.txt  package.xml
ros_ws/src/core/hands/hands_srv/srv/: Gap_Follower.srv  Opp_Trajectory.srv  PID_Distance.srv  Stanley_Controller.srv
ros_ws/src/core/hands/opp_trajectory_server/: CMakeLists.txt  package.xml
ros_ws/src/core/hands/opp_trajectory_server/config/: opp_trajectory_server.yaml
ros_ws/src/core/hands/opp_trajectory_server/src/: opp_trajectory_server.cpp
ros_ws/src/core/hands/pure_pursuit_service/: CMakeLists.txt  package.xml
ros_ws/src/core/hands/pure_pursuit_service/config/: pure_pursuit_server.yaml
ros_ws/src/core/hands/pure_pursuit_service/include/: pure_pursuit_visualization.h
ros_ws/src/core/hands/pure_pursuit_service/src/: pure_pursuit_server.cpp  pure_pursuit_visualization.cpp
ros_ws/src/core/hands/stanley_controller_service/: CMakeLists.txt  package.xml
ros_ws/src/core/hands/stanley_controller_service/config/: stanley_controller_server.yaml
ros_ws/src/core/hands/stanley_controller_service/include/: stanley_controller_visualization.h
ros_ws/src/core/hands/stanley_controller_service/src/: stanley_controller_service.cpp  stanley_controller_visualization.cpp
ros_ws/src/racer_system/artus_imu_toolkit/arduino_firmware/artus_imu_toolkit_firmware/: CMakeLists.txt  README.md  library.properties  package.xml
ros_ws/src/racer_system/artus_imu_toolkit/artus_imu_publisher/: CMakeLists.txt  README.md  package.xml
ros_ws/src/racer_system/artus_imu_toolkit/artus_imu_publisher/cfg/: artus_imu_sensors.cfg
ros_ws/src/shared/analysis-tools/: CMakeLists.txt  package.xml
ros_ws/src/shared/analysis-tools/include/: config.h  log_stats.h  process_track.h  speed_info.h
ros_ws/src/shared/analysis-tools/src/: log_stats.cpp  process_track.cpp  speed_info.cpp
ros_ws/src/shared/car_config/: CMakeLists.txt  package.xml
ros_ws/src/shared/car_config/cfg/: dynamic_physical_properties.cfg
ros_ws/src/shared/car_config/include/: dynamic_physical_properties.h  physical_properties.h
ros_ws/src/shared/car_config/src/: dynamic_physical_properties.cpp  physical_properties.cpp
ros_ws/src/shared/debug_tools/: CMakeLists.txt  package.xml
ros_ws/src/shared/debug_tools/include/: messages_sanity_check.h
ros_ws/src/shared/debug_tools/src/: messages_sanity_check.cpp
ros_ws/src/shared/geometric_math/: CMakeLists.txt  package.xml
ros_ws/src/shared/geometric_math/include/: circle.h  circle_fit.h  geometric_math.h
ros_ws/src/shared/geometric_math/src/: circle.cpp  circle_fit.cpp  geometric_math.cpp
ros_ws/src/shared/imu_velocity/: CMakeLists.txt  package.xml
ros_ws/src/shared/imu_velocity/include/: imu_accumulator.h
ros_ws/src/shared/imu_velocity/launch/: car_imu_velocity.launch
ros_ws/src/shared/imu_velocity/src/: imu_accumulator.cpp  main.cpp
(+262 files in other folders)
