<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>analysis-tools</name>
  <version>0.0.0</version>
  <description>Tools for analysing the driving behaviour.</description>

  <!-- Maintainer -->
  <maintainer email="f110@ls12.cs.uni-dortmund.de">PG F1/10</maintainer>

  <!-- License -->
  <license>MIT</license>
  <license>GPLv3</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>car_config</depend>
  <depend>vesc_sim</depend>
  <depend>drive_msgs</depend>
  <depend>geometric_math</depend>

</package>
