<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>geometric_math</name>
  <version>0.0.0</version>
  <description>Performs various geometric calculations like fitting circles in a pointcloud</description>

  <!-- Maintainer -->
  <maintainer email="f110@ls12.cs.uni-dortmund.de">PG F1/10</maintainer>

  <!-- License -->
  <license>MIT</license>
  <license>GPLv3</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

</package>
