<?xml version="1.0"?>
<package format="2">
  <name>cartographer_setup</name>
  <version>0.0.0</version>
  <description>The "cartographer_setup" package is a meta package that contains files for configuring, setting-up and launching cartographer in different operation modes.</description>

  <!-- Maintainer -->
  <maintainer email="f110@ls12.cs.uni-dortmund.de">PG F1/10 (WS21/22)</maintainer>

  <!-- License -->
  <license>MIT</license>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cartographer</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>cartographer_ros_msgs</exec_depend>
  <exec_depend>cartographer_rviz</exec_depend>
</package>
