<?xml version="1.0"?>
<package format="2">
  <name>obstacle_detection_lidar</name>
  <version>0.0.0</version>
  <description>The scan obstacle filter package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="jan.pham@tudo.de">Jan Pham</maintainer>
  <maintainer email="nico.koltermann@tu-dortmund.de">Nico Koltermann</maintainer>
  <maintainer email="simon.kurz@tudo.de">Simon Kurz</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>drive_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>eyes_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>drive_msgs</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>laser_geometry</build_export_depend>
  <build_export_depend>eyes_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  
  <exec_depend>drive_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>eyes_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <!-- TODO:Not integrated yet -->
  <!-- <exec_depend>dynamic_reconfigure</exec_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_depend>dynamic_reconfigure</build_depend> -->

</package>
