<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>autonomous</name>
  <version>0.0.0</version>
  <description>Metapackage to include jsk_rviz_plugins as external module</description>

  <!-- Maintainer -->
  <maintainer email="f110@ls12.cs.uni-dortmund.de">PG F1/10</maintainer>

  <!-- License -->
  <license>MIT</license>
  <license>GPLv3</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>jsk_rviz_plugins</depend>

</package>
